<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>no.nav.bidrag</groupId>
  <artifactId>bidrag-behandling-felles-dto</artifactId>
  <version>0.0.97-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>bidrag-behandling-felles-dto</name>
  <description>Inneholder DTOer (dataklasser) som brukes av flere repositories ifbm behandling av bidrag</description>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <organization>NAV (Arbeids- og velferdsdirektoratet) - The Norwegian Labour and Welfare Administration</organization>
      <organizationUrl>https://www.nav.no</organizationUrl>
    </developer>
  </developers>

  <properties>

    <!-- language -->
    <java.version>17</java.version>
    <kotlin.version>1.8.21</kotlin.version>
    <swagger.version>2.2.8</swagger.version>
    <bidrag-behandling-felles.version>0.0.87</bidrag-behandling-felles.version>
    <bidrag-domain.version>20230817134109_ada9d45</bidrag-domain.version>
    <jakarta.version>3.0.2</jakarta.version>

    <!-- build -->
    <build-helper-maven.version>3.2.0</build-helper-maven.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  </properties>

  <distributionManagement>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/navikt/bidrag-behandling-felles-dto</url>
    </repository>
  </distributionManagement>

  <scm>
    <developerConnection>scm:git:git@github.com:navikt/bidrag-behandling-felles-dto.git</developerConnection>
    <connection>scm:git:git@github.com:navikt/bidrag-behandling-felles-dto.git</connection>
    <url>https://github.com/navikt/bidrag-behandling-felles-dto.git</url>
    <tag>HEAD</tag>
  </scm>

  <dependencies>

    <!-- swagger -->
    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations</artifactId>
      <version>${swagger.version}</version>
    </dependency>
    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-domain</artifactId>
      <version>${bidrag-domain.version}</version>
    </dependency>
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
      <version>${jakarta.version}</version>
    </dependency>
    <!-- nav -->
    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-behandling-felles</artifactId>
      <version>${bidrag-behandling-felles.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>process-resources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <sourceDirs>
                <source>src/main/kotlin</source>
              </sourceDirs>
            </configuration>
          </execution>
          <execution>
            <id>test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <jvmTarget>1.8</jvmTarget>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>ktlint</id>
            <phase>verify</phase>
            <configuration>
              <target name="ktlint">
                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                  <arg value="src/**/*.kt" />
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          <execution>
            <id>ktlint-format</id>
            <phase>validate</phase>
            <configuration>
              <target name="ktlint">
                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                  <jvmarg value="--add-opens" />
                  <jvmarg value="java.base/java.lang=ALL-UNNAMED" />
                  <arg value="-F" />
                  <arg value="src/**/*.kt" />
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.pinterest</groupId>
            <artifactId>ktlint</artifactId>
            <version>0.47.1</version>
          </dependency>
          <!-- additional 3rd party ruleset(s) can be specified here -->
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/navikt/bidrag-commons</url>
    </repository>
  </repositories>
</project>
